# reddit-presentation

./: pyproject.toml  readme.md
code_screenshots/: 1.pptx  2.pptx
reddit_present/: main.py
