[tool.poetry]
name = "reddit-presenter"
version = "0.1.0"
description = ""
authors = ["Mads Kongstad Laugesen <kongstad.mads@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
praw = "^7.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
